--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
     "@tauri-apps/api": "^2.0.0",
     "@tauri-apps/plugin-dialog": "^2.0.0",
     "@tauri-apps/plugin-shell": "^2.0.0",
+    "antd": "^6.2.2",
+    "dayjs": "^1.11.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
